--- a/.gitignore
+++ b/.gitignore
@@ -275,3 +275,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/python,windows,linux,intellij+all
 
 logs/*.csv
+logs/*.json
